<resources>
    <string name="app_name">"MERIDIAN"</string>

    <string name="title_activity_main">Select Unit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related with user name -->
    <string name="register_password">Password</string>
    <string name="register_password2">Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="register_emailAddress">Email Address</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_phoneNumber">Phone Number</string>

    <string name="register_numberOfBuilding">Number Of Building</string>
    <string name="register_numberOfFloor">Number Of Floor</string>
    <string name="register_numberOfUnit">Number Of Unit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_register">Create New Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nevigation Item -->
    <string name="action_tenantsList">Tenants List</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <!-- Option Item -->
    <string name="action_unpaidRent">List of Unpaid Rent</string>


    <!--  Tenat  -->
    <string name="title_activity_tenant">TenantActivity</string>
    <string name="title_activity_tenant_info">The Tenant List</string>
    <string name="title_activity_new_tenant">New Tenant for #</string>
    <string name="title_activity_edit_tenant">Edit Tenant for #</string>
    <string name="title_activity_detail_tenant">Detail Tenant Info</string>

    <!-- Text hint for first name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_first_name">First Name</string>

    <!-- Text hint for last name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_last_name">Last Name</string>

    <!-- Toast message in Tenant Edit Activity -->
    <string name="editor_insert_tenant_failed">Error with inserting Tenant Info</string>
    <string name="editor_insert_tenant_successful">Successfully inserting Tenant Info</string>
    <string name="editor_update_tenant_failed">Error with updating Tenant Info</string>
    <string name="editor_update_tenant_successful">Successfully updating Tenant Info</string>

    <!-- Empty Tenant -->
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_tenant_view_title_text">The List of Tenant is Empty</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_tenant_view_subtitle_text">Please add tenant</string>

    <!--  Transaction  -->
    <string name="title_activity_transaction_history">List of Transaction</string>
    <string name="title_activity_new_transaction">New Transaction for #</string>
    <string name="title_activity_edit_transaction">Edit Transaction for #</string>

    <!-- Toast message in Transaction Edit Activity -->
    <string name="editor_insert_transaction_failed">Error with inserting Transaction Info</string>
    <string name="editor_insert_transaction_successful">Successfully inserting Transaction Info</string>
    <string name="editor_update_transaction_failed">Error with updating Transaction Info</string>
    <string name="editor_update_transaction_successful">Successfully updating Transaction Info</string>

    <!-- Empty Transaction -->
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_transaction_view_title_text">No Transaction History Available</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_transaction_view_subtitle_text">Please add transation</string>

    <!-- Drop Down Menu for Transaction -->
    <string-array name="finance_transation_menu">
        <item>Rent</item>
        <item>Utility</item>
        <item>Deposit</item>
    </string-array>

    <string-array name="floor_menu_list">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
    </string-array>

</resources>
