<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:ignore="UselessParent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:isScrollContainer="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:text=" Email Address &amp; Password"
                style="@style/RegisterTitleStyle"  />
            <TextView
                android:text="Please select the Email Address and password"
                style="@style/RegisterDescriptionStyle"  />
        </LinearLayout>

        <!-- Email Address field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_emailAddress"
                android:hint="@string/register_emailAddress"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                style="@style/RegisterEditorFieldStyle" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_password"
                android:hint="@string/register_password"
                android:imeActionId="@+id/password"
                android:imeActionLabel="@string/action_sign_in"
                style="@style/RegisterEditorFieldStyle" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password field -->
        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  >
            <EditText
                android:id="@+id/register_password2"
                android:hint="@string/register_password2"
                android:imeActionId="@+id/password"
                android:imeActionLabel="@string/action_sign_in"
                style="@style/RegisterEditorFieldStyle" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBoxShowPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_alignLeft="@+id/etPassword"
                android:layout_below="@+id/etPassword"
                android:text="@string/show_pwd" />
            <TextView
                android:text="Password must be at least 8 charactor, contain lower and upper case, and contain at least one number "
                style="@style/RegisterDescriptionStyle"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/info_next"
                android:text="Next"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/RegisterFragmentLongButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

