<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:ignore="UselessParent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="Enter Your Property Infomation"
                style="@style/CategoryStyle"  />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="This will initialized the app with property infomation"
                style="@style/CategoryStyle"  />
        </LinearLayout>

        <!-- Number of Building field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/register_numberOfBuilding"
                android:inputType="textCapWords"
                android:hint="@string/register_numberOfBuilding"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:ems="20"
                style="@style/EditorFieldStyle" />
        </android.support.design.widget.TextInputLayout>

        <!-- Number Of Floor for Each Building field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/register_numberOfFloor"
                android:inputType="textCapWords"
                android:hint="@string/register_numberOfFloor"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:ems="20"
                style="@style/EditorFieldStyle" />
        </android.support.design.widget.TextInputLayout>

        <!-- Number Of Unit for Each Floor field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_numberOfUnit"
                android:inputType="textCapWords"
                android:hint="@string/register_numberOfUnit"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:ems="20"
                style="@style/EditorFieldStyle" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/property_before"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Before" />
            <Button
                android:id="@+id/property_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

