<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        tools:ignore="UselessParent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="Enter Your Name"
                    style="@style/CategoryStyle"  />
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="You will use this name to communicate with tenant"
                    style="@style/CategoryStyle"  />
            </LinearLayout>

            <!-- First Name field -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/register_firstName"
                android:inputType="textCapWords"
                android:hint="@string/register_firstName"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:ems="20"
                style="@style/EditorFieldStyle" />
            </android.support.design.widget.TextInputLayout>


            <!-- Last Name field -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_lastName"
                android:inputType="textCapWords"
                android:hint="@string/register_lastName"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:ems="20"
                style="@style/EditorFieldStyle" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/name_before"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Before" />
                <Button
                    android:id="@+id/name_next"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Next" />
            </LinearLayout>
    </LinearLayout>
</ScrollView>

